--- a/docker-compose.freetier.yml
+++ b/docker-compose.freetier.yml
@@ -106,11 +106,11 @@ services:
       context: ./chatbot-ui
       dockerfile: Dockerfile
       args:
-        REACT_APP_CHATBOT_API_URL: http://${DOMAIN:-localhost}:4000
+        REACT_APP_CHATBOT_API_URL: https://${DOMAIN:-localhost}
     container_name: chatbot_ui
     restart: always
     ports:
-      - "80:3000"
+      - "8080:3000"
     networks:
       - tasks_net
     depends_on:
